just upgraded flutter to latest verison 3.35.4 stable

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
-  "cSpell.words": ["allprojects", "ptgtuygage", "Subproject", "subprojects"],
+  "cSpell.words": [
+    "allprojects",
+    "prefs",
+    "ptgtuygage",
+    "Subproject",
+    "subprojects"
+  ],
   "java.configuration.updateBuildConfiguration": "interactive",
   "cmake.ignoreCMakeListsMissing": true
 }
