--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   provider: ^6.1.5+1
   http: ^1.5.0
   shared_preferences: ^2.5.3
+  flutter_secure_storage: ^9.2.4
 
 dependency_overrides:
   characters: ^1.4.1
